found a bug, fixed it, added javadocs to the Main class